Optimize for Vercel: reduce memory usage and dependencies
- Add memory-optimized vercel.json with 1024MB limit
- Create lightweight api/optimized.py without heavy dependencies
- Remove sentence-transformers and chromadb from Vercel deployment
- Use simple keyword-based search instead of vector embeddings
- Add file-based caching instead of heavy vector database
- Create .vercelignore to exclude unnecessary files
- Use requirements-vercel.txt with minimal dependencies

--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,20 @@
 {
   "version": 2,
   "functions": {
-    "api/index.py": {
-      "maxDuration": 60
+    "api/optimized.py": {
+      "maxDuration": 300,
+      "memory": 1024,
+      "runtime": "python3.9"
     }
   },
   "routes": [
     {
       "src": "/api/v1/(.*)",
-      "dest": "api/index.py"
+      "dest": "api/optimized.py"
     },
     {
       "src": "/(.*)",
-      "dest": "api/index.py"
+      "dest": "api/optimized.py"
     }
   ]
 }
