--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
   "functions": {
     "api/optimized.py": {
       "maxDuration": 300,
-      "memory": 1024,
-      "runtime": "python3.9"
+      "memory": 1024
     }
   },
   "routes": [
