--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,4 +1,25 @@
-# Minimal requirements for Vercel deployment
+# Full requirements for Railway deployment
+# Web Framework
 fastapi==0.115.6
 uvicorn[standard]==0.32.1
 pydantic==2.10.3
+pydantic-settings==2.7.0
+
+# Document Processing
+PyPDF2==3.0.1
+python-multipart==0.0.20
+
+# AI & ML
+google-generativeai==0.8.3
+sentence-transformers==3.3.1
+chromadb==0.5.23
+
+# Utilities
+python-dotenv==1.0.1
+requests==2.32.3
+httpx==0.28.1
+tenacity==9.0.0
+
+# Additional dependencies for the full RAG system
+torch==2.5.1
+numpy==1.24.3
